--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "resourceName": "egrp-cad",
-    "resourceDir": "C:/Users/white/OneDrive/Documents/[Servers]/Rebuild/txData/ServerBuild/resources/[EGRPFramework]/[core.hud]/egrp_cad",
+    "resourceName": "",
+    "resourceDir": "",
     "_comment": "CHANGE THE ABOVE TO YOUR RESOURCE DIRECTORY"
 }
