--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "resourceName": "",
-    "resourceDir": "",
+    "resourceName": "whitigol-cad",
+    "resourceDir": "./out",
     "_comment": "CHANGE THE ABOVE TO YOUR RESOURCE DIRECTORY"
 }
