--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fivem-ts-template-new",
-    "version": "1.0.0",
+    "version": "1.2.0",
     "main": "index.js",
     "license": "MIT",
     "scripts": {
@@ -23,5 +23,7 @@
     "nodemonConfig": {
         "ext": "js,ts,lua,json"
     },
-    "dependencies": {}
+    "dependencies": {
+        "axios": "^1.4.0"
+    }
 }
